@@ -1,3 +1,10 @@
+2011-06-30  Mike Frysinger  <vapier@gentoo.org>
+
+  * include/urjtag/bfin.h (bfin_part_data.emu_oab): Constify.
+    (bfin_emu_oab): Delete external decl.
+  * src/bfin/bfin-part-bfin.c (bfin_emu_oab): Constify & localize.
+  * src/bfin/bfin.c (bfin_emu_wait_ts): Constify.
+
 2011-07-01  Jie Zhang  <jie.zhang@analog.com>
 
   * src/lib/ansidecl.h: Move to include.
